# MPU6050-sensor-testing

./: log.txt  sdkconfig
main/: CMakeLists.txt  main.c
main/Kalman/: kalman.c  kalman.h
main/MPU6050/: mpu6050.c  mpu6050.h
